<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="330dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/activity_main_dialog_csv_title"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/activity_export_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_export_range" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/activity_export_date_from"
                    android:textColor="@color/glucosio_text_dark"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_export_date_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:singleLine="true"
                    android:textSize="@dimen/abc_text_size_body_2_material" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/dialog_export_date_to"
                    android:textColor="@color/glucosio_text_dark"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_export_date_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:singleLine="true"
                    android:textSize="@dimen/abc_text_size_body_2_material" />
            </LinearLayout>
        </LinearLayout>

        <RadioButton
            android:id="@+id/activity_export_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_export_all" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_export_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/dialog_add_cancel"
                android:textColor="@color/glucosio_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_export_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/dialog_export_button"
                android:textColor="@color/glucosio_pink"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>